--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>andrew smith</title>
+    <title>hi! im andrew smith</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,6 +15,7 @@
     <div id="links">
         <a class="link" href="https://a-smith-22.github.io/zenith/" target="_blank">Zenith</a>
         <a class="link" href="https://a-smith-22.github.io/derailed/" target="_blank">Derailed</a>
+        <a class="link" href="https://a-smith-22.github.io/" target="_blank">Portfolio</a>
     </div>
 
 </body>
