--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="links">
         <a class="link" href="https://a-smith-22.github.io/zenith/" target="_blank">Zenith</a>
         <a class="link" href="https://a-smith-22.github.io/derailed/" target="_blank">Derailed</a>
-        <a class="link" href="https://a-smith-22.github.io/" target="_blank">Portfolio</a>
+        <a class="link" href="https://a-smith-22.github.io/ghish/" target="_blank">Ghish</a>
     </div>
 
 </body>
